--- a/HnrsPortAbout.html
+++ b/HnrsPortAbout.html
@@ -27,7 +27,6 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html" class = "active"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
-<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -49,11 +48,11 @@ university honors program">
 
 <tr>
 
-<td> <img src = "Pictures/Me1.jpeg" alt = "A professional picture of me"> </td>
+<td> <img src = "Pictures/Me2.jpeg" alt = "A business casual picture of me"> </td>
 
-<td> <img src = "Pictures/Me2.jpeg" alt = "Another professional picture of me"> </td>
+<td> <img src = "Pictures/LookAtMeNow.jpg" alt = "I'm wearing a suit! Also this is the most recent photo of me, with the nicer hairstyle and the new rainbow glasses."> </td>
 
-<td> <img src = "Pictures/Me3.jpeg" alt = "Yet another professional picture of me"> </td>
+<td> <img src = "Pictures/Snow.jpg" alt = "Shoveling snow"> </td>
 
 </tr>
 
@@ -73,19 +72,21 @@ university honors program">
 
 <p> <span class = "Imp">Birthday:</span> December 5 </p>
 
-<p> <span class = "Imp">Major:</span> Information Technology (Game Design) </p>
+<p> <span class = "Imp">MBTI Personality (for those who think this is actually important):</span> INFJ </p>
 
-<p> <span class = "Imp">Minor:</span> Information Technology (Software Development) </p>
+<p> <span class = "Imp">Major:</span> Elementary Education (Formerly Information Technology) </p>
 
-<p> <span class = "Imp">Projected Year of Graduation:</span> 2028 </p>
+<p> <span class = "Imp">Minor:</span> None </p>
 
-<p> <span class = "Imp">Favorite color:</span> Cyan </p>
+<p> <span class = "Imp">Projected Year of Graduation:</span> 2029 </p>
+
+<p> <span class = "Imp">Favorite color:</span> Yellow </p>
 
 <p> <span class = "Imp">Favorite food:</span> Mac & Cheese </p>
 
 <p> <span class = "Imp">Favorite species of moth:</span> Apantesis phalerata </p>
 
-<p> <span class = "Imp">Favorite NASCAR driver:</span> Christopher Bell </p>
+<p> <span class = "Imp">Favorite NASCAR driver(s):</span> Christopher Bell and Carson Hocevar </p>
 
 <p style = "text-align: center"> <span class = "VeryImp">* This is all very important information - I swear! *</span> </p>
 
@@ -98,10 +99,8 @@ university honors program">
 
 <div class = "CollapsibleContent">
 
-<h2> My Story </h2>
-
 <p>
-My story is pretty straightforward.
+My story was pretty straightforward.
 </p>
 
 <p>
@@ -117,71 +116,53 @@ I was a computer kid. I still am a computer kid. I’ll always be a computer kid
 </p>
 
 <p>
-Straightforward as that.
+Or so I thought.
 </p>
 
 <p>
-I wish. 
+In all those nights dreaming of what I could be; the code I'd write, the places I'd see, in all of them and more – I wanted to 
+know code well enough to eventually settle down and teach it to a class of eager peers. Just like my programming teacher through 
+high school. But forced against my will, writing programs I had no love for, applying for jobs that meant nothing to me, being 
+disregarded by my peers, teachers, advisors – I couldn't take it anymore. 
 </p>
 
 <p>
-My school wasn’t able to provide a strong technological education at the time I attended; the computer labs filled with the now
-archaic desktop machines running Windows 8. You were lucky if you could get one to even just boot up and load Google Docs for an hour. 
-And yet I came into the labs every day, patiently troubleshooting every issue I ran into. I learned over time how to get even some of 
-the most finicky devices to work, even fixing a computer my class needed for a project one day when all hope was thought to be lost.
+People believe that the strong will fight on. Continue pursuing this path to see the brighter future on the other side. 
+Continue against their will. Against your will. 
 </p>
 
 <p>
-And yet even in my triumph of being able to get any computer to work, I still faced the hardship of the judgment by my peers. 
-The girls thought I was strange. The boys thought I was annoying. And when it came down to it and fixed something when it truly counted,
-my teacher told me to "leave the computers to the boys."
+But sometimes the strongest thing you could do, the strongest action of all, is admitting to yourself that this path, 
+this path you've spent years preparing to trek, that you've spent your whole life fighting through – isn't the one for you. 
 </p>
 
 <p>
-But I kept pushing forwards. I took an AP level computer science class my freshman year. I went to a vocational school to learn 
-about information technology through my junior and senior years. And now I’m here – a student in the University Honors Program 
-pursuing a degree in information technology, specifically studying software development and game design. For every bump in the road and 
-person that has tried to tear me down, I've only grown and improved. I am an enterprising individual, always looking to expand my 
-knowledge or take on a new challenge - and nobody is going to stand in my way. 
-</p>
-
-</div>
-
-<br>
-<br>
-
-<button type = "button" class = "Collapsible"> My Strengths </button>
-
-<div class = "CollapsibleContent2">
-
-<p>
-One of the many aspects of the University Honors Program is being able to recognize your strengths and how they play into your role 
-as a global citizen scholar. So, I'm including my top five VIA character strengths on this website because it seems relevant to
-the program. Now, whether or not you think I truly exhibit these strengths is up to your interpretation. At the end of the day, 
-each and every single person out there is going to have a different image of me in their minds. But these are the top five character
-strengths that the computer gave me, and for the most part, are the ones that resonate most with me. 
+The strongest thing to do, in a world full of people that will motivate you to continue "keeping up the good work," or "keep doing 
+what you do best," – or even pressure you, believing "this is the only way" – is to follow your true passion. To go against their will 
+and do what you love, even if they believe it isn't right. To go against your will, the falsified dreams you convinced yourself to 
+believe and work towards for years, and do what you feel the most love for doing. 
 </p>
 
 <p>
-Additionally, if you would like to take the text for yourself, the link is right <a href  = "https://www.viacharacter.org/" target = "_blank">here!</a>
-It's a very nice tool for assessing what strengths you have for yourself, especially if you have a tough time seeing the positives in
-yourself above all of the negativity you might feel. You're already an awesome person for taking the time to visit my site, but this
-test will further help you to see the awesome within yourself, and what traits specifically that you have as strengths. 
+And for me that's teaching. 
 </p>
 
-<table class = "CharacterTable">
+<p>
+Believe me – I know this field is going to be a rough one. The pay is horrendous. Their funding could get cut. 
+The youth of today will only become more cold, jaded, stubborn, or troublesome to make it in these egregiously more jaded and 
+horrific times we're approaching. 
+</p>
 
-<tr>
+<p>
+But I don't care.
+</p>
 
-<td> Kindness </td>
-<td> Fairness </td>
-<td> Curiousity </td>
-<td> Humility </td>
-<td> Appreciation of Beauty & Excellence </td>
-
-</tr>
-
-</table>
+<p>
+I'd rather spend my entire life with nothing but the work I've done for them and the work I love and feel most passionate about 
+doing, than to waste it all on everything and a role that doesn't give me any form of fulfillment. I want to be an elementary school 
+teacher. I want to make learning exciting and enjoyable again. But most importantly – I just want to see my students smile, and 
+leave these formative years of their childhood lives with happy memories. 
+</p>
 
 </div>
 
@@ -221,6 +202,12 @@ it can use to make a sound frequent enough to jam their echolocation and communi
 I am an artist, drawing both on paper with colored pencils, and electronically with my tablet and a cheap pen from Amazon. I also occasionally
 dabble in clay, and sometimes even go back to my roots of drawing with crayon. A lot of my best work is posted on my page of fun stuff, so
 be sure to check that out if you're interested!
+
+<br>
+<br>
+
+I lied, it's not. This whole website is a giant WIP. Don't go there looking for it!
+
 </p>
 
 <img src = "Pictures/ToucanPic.png" alt = "Digital drawing of a toucan with a rainbow beak" class = "FactPic2">
@@ -236,8 +223,13 @@ be sure to check that out if you're interested!
 <p>
 One of my current side quests has been learning how to garden and raise plants. I love the idea of helping to take care of something 
 living even if I can't currently own a pet due to me living in a dorm, and I like the idea of having something in my dorm to 
-provide me with fresh oxygen! I currently have four plants: two succulents, one unidentified plant, and one pot of seeds that 
-have yet to sprout. 
+provide me with fresh oxygen! 
+
+<br>
+<br>
+
+This picture is outdated and I don't have the patience to update it. 
+
 </p>
 
 </div>
