--- a/HnrsPortFun.html
+++ b/HnrsPortFun.html
@@ -27,7 +27,6 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
-<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html" class = "active"> Fun Stuff :] </a>
@@ -47,13 +46,67 @@ university honors program">
 
 <main>
 
-<img src = "Pictures/NewFunPic.jpeg" alt = "Picture of a street taken outside of University of Cincinnati" class = "FrontPic">
+<img src = "Pictures/funfun.jpg" alt = "A picture of Orion (a roller coaster)" class = "FrontPic">
 
 <h2> All The Fun Stuff! </h2>
 
 <p> 
-I am currently in the progress of revamping this page. Thank you for viewing this page though! I'm hoping to display some of my artwork here in the future. 
+This is a webpage devoted to all of my fun and mostly inconsequential side projects. Some are art-related, some are crafts, and all
+of them are were included to help make this website as enjoyable to visit as possible. So I hope you enjoy!
 </p>
+
+<h3> Other Websites! </h3>
+
+<p>
+Over the course of my short-lived IT career and otherwise, I've created quite a few different websites for myself and others.
+Below are some of the websites I've created around the web. 
+</p>
+
+<div class = "FunFact1">
+
+<p>
+In 2024, I was tasked with creating a website for Fido's Freezzy's so that they
+can advertise their new product, Yobitz! You can find that website linked <a href = "http://fidosfreezzys.com" target = "_blank">here!</a>
+
+<br>
+<br>
+
+I'd highly appreciate it if you checked it, and by extension their business, out! They're very nice people and their frozen dog desserts
+sound like they'd be a great treat for your pet!
+
+<br>
+<br>
+
+Additionally, their treats are perfectly safe for cats! 
+
+</p>
+
+<img src = "Pictures/FidosLogo.png" alt = "Fido's Freezzys logo" class = "FactPic3">
+
+</div>
+
+<br>
+
+
+<!--
+<div class = "FunFact2">
+
+<img src = "Pictures/CornEarwormPic.jpeg" alt = "A very fluffy corn earworm moth perched on my finger" class = "FactPic2">
+
+<p>
+I am also in the process of making a website to share 
+
+<br>
+<br>
+
+You can find this website linked here or on my GitHub!
+<a href = "link" target = "_blank">here!</a> 
+</p>
+
+</div>
+-->
+
+<hr>
 
 </main>
 
@@ -85,6 +138,10 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+
+</BODY>
+
+</HTML>
 
 </BODY>
 
