--- a/HnrsPortInvolvement.html
+++ b/HnrsPortInvolvement.html
@@ -27,7 +27,6 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html" class = "active"> Involvement </a>
-<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -80,27 +79,6 @@ For more information, I encourage you to check out their website linked
 <div class = "FunFact1">
 
 <p>
-I am currently volunteering every Friday at the Cincinnati Hillel to help clean up after their Shabbat Evening Experiences! They are a center for 
-young Jewish life in Cincinnati and are very friendly. They also make very good food! 
-
-<br>
-<br>
-
-For more information, I encourage you to check out their website linked <a href = "https://www.cincinnatihillel.org/" target = "_blank">here!</a>
-They're very welcoming of newcomers and, if there's spots available, likely wouldn't mind a helping hand! 
-</p>
-
-<img src = "Pictures/CincyHillelLogo.png" alt = "Cincinnati Hillel Logo" class = "FactPic1">
-
-</div>
-
-<br>
-
-<div class = "FunFact2">
-
-<img src = "Pictures/ChurchLogo.jpg" alt = "A very fluffy corn earworm moth perched on my finger" class = "FactPic2">
-
-<p>
 I am also volunteering for the Homework Club, hosted at the Washington United Church of Christ! It is a secular club centered around
 providing tutoring and after school help to low-income elementary school-aged children. I've worked with children at my church in 
 the past, so this is a great way for me to further grow my skills in helping children.
@@ -110,6 +88,29 @@ the past, so this is a great way for me to further grow my skills in helping chi
 
 For more information, I encourage you to check out their website linked 
 <a href = "https://www.washingtonucc.org/" target = "_blank">here!</a> 
+</p>
+
+<img src = "Pictures/ChurchLogo.jpg" alt = "Cincinnati Hillel Logo" class = "FactPic1">
+
+</div>
+
+<br>
+
+<div class = "FunFact2">
+
+<img src = "Pictures/BiPanAroAce.png" alt = "Aro and Ace flags with a Pan heart on top." class = "FactPic2">
+
+<p>
+I am also a member of the Bi/Pan/Aro/Ace affinity group on campus! Most of the other people attending are very kind and accepting,
+so if you use one of these labels yourself, I'd highly suggest attending on Tuesdays!
+
+<br>
+<br>
+
+For more information, I encourage you to check out their Instagram linked 
+<a href = "https://www.instagram.com/uc.bipanaroace/" target = "_blank">here!</a> Also note that the image used here is not an 
+official logo and was an image I created in Canva to represent the group. 
+ 
 </p>
 
 </div>
