--- a/HnrsPortRefl.html
+++ b/HnrsPortRefl.html
@@ -28,7 +28,6 @@ university honors program">
 <a href = "index.html"> Home </a> 
 <a href = "HnrsPortAbout.html"> About Me </a>
 <a href = "HnrsPortInvolvement.html"> Involvement </a>
-<a href = "HnrsPortGateway.html"> Gateway </a>
 <a href = "HnrsPortExperiences.html"> Experiences </a>
 <a href = "HnrsPortRefl.html" class = "active"> Year in Review </a>
 <a href = "HnrsPortFun.html"> Fun Stuff :] </a>
@@ -48,27 +47,42 @@ university honors program">
 
 <main>
 
-<img src = "Pictures/iSureHopeItDoes.png" alt = "Road work ahead" class = "RoadWorkSign">
+<img src = "Pictures/reflect.jpg" alt = "A nice REFLECTIVE pool of water" class = "FrontPic">
 
 <h2> My Years In Review </h2>
 
 <p>
 Each year, it is imperative that each of us as members of the esteemed University Honors Program write a review, reflecting on how
-our year has went and what we have learned. And I, as a member of the University Honors Program, will do the same. But it hasn't
-been a full year yet, so you aren't going to find anything of value on this page at the moment. Sorry! I appreciate you checking
-the page even if it is blank, nonetheless! 
+our year has went and what we have learned. And I, as a member of the University Honors Program, will do the same. Below 
+are all of my completed reflective pieces on each academic term I've attended this fine university.
 </p>
 
-<p style = "text-align: center"> <span class = "VeryImp">* Click on the boxes to see their [lack of] content! *</span> </p>
+<p style = "text-align: center"> <span class = "VeryImp">* Click on the boxes to see their content! *</span> </p>
 
 <button type = "button" class = "Collapsible"> Review: Fall 2024 - Spring 2025 </button>
 
-<div class = "CollapsibleContent">
+<div class = "CollapsibleContent2">
 
-<p> 
-This is where my first Year-In-Review reflective piece will be linked. Unfortunately, it is not finished yet, so there is nothing 
-linked here. Thanks for opening this anyway, though!
+<br>
+<br>
+
+<div class = "FunFact1">
+
+<p>
+Global Citizen Scholar. A word I once used to look forward to hearing every Monday morning. A word I grew to loathe for every bit of false 
+positivity it appeared to represent. And a word I would soon grow into and love as I'm made to appreciate the title more and more all over the 
+course of a year. 
+
+<br>
+<br>
+
+Read the full reflection <a href = "Review2425.html">here!</a> 
+
 </p>
+
+<img src = "Pictures/horseweed.jpg" alt = "A picture of horsebane (you'll have to read the essay to understand its significance)" class = "FactPic1">
+
+</div>
 
 </div>
 
@@ -110,6 +124,21 @@ opening this anyway, though!
 <p> 
 This is where my fourth and final Year-In-Review reflective piece will be linked. Unfortunately, I'm nowhere near graduation. Thanks
 for opening this anyway, though! I highly appreciate your interest!
+</p>
+
+</div>
+
+<br>
+<br>
+
+<button type = "button" class = "Collapsible"> Review: Fall 2028 - Spring 2029 </button>
+
+<div class = "CollapsibleContent">
+
+<p> 
+What is this? A year listed after I said 2028 would be my graduating year?? All a result of changing majors, and although this year won't
+be covered under scholarship, it will be worth it to become a teacher in the end. This will be my final year-in-review now, and I am
+nowhere near the point of even thinking about writing it. But thanks for opening it and checking it out anyway!
 </p>
 
 </div>
